# byte-stuffing

./: .gitignore  CMakeLists.txt  Makefile  PPP.c  PPP.h  README.md  cobs.py  main.c  project.yml  test.c  test_cobs.py
C/: PPP.h  test.c
C-COBS/: Makefile  cobs-stuffing.c  cobs-stuffing.h  cobs.c  cobs.h  test.c
HDLC/: PPP.c  PPP.h  README.md
Python/: PPP_stuffing.py  serial_receiver.py  serial_receiver_multithreading.py  serial_transmitter.py  test.py  test_cobs.py
WinSerial/: WinSerial.sln
WinSerial/WinSerial/: WinSerial.vcxproj  WinSerial.vcxproj.filters  args-parsing.cpp  args-parsing.h  main.cpp
WinSerial/WinSerial/Debug/: WinSerial.exe.recipe  WinSerial.ilk  vc142.idb
WinSerial/WinSerial/Debug/WinSerial.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  WinSerial.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bytestream/: bytestream.c  bytestream.h
test/: dma_style_ppp_handler.c  dma_style_ppp_handler.h  test_PPP.c  test_bytestream.c  test_cobs.c
